--- a/ninjaone-timer.html
+++ b/ninjaone-timer.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>NinjaOne Ticket Timer</h1>
+    <h1>BillJitsu</h1>
 
     <!-- Login Screen -->
     <div id="loginScreen">
@@ -293,3 +293,4 @@
 </body>
 
 </html>
+
