--- a/ninjaone-timer.html
+++ b/ninjaone-timer.html
@@ -47,7 +47,7 @@
   <script>
     // ==== CONFIGURATION ====
     const CLIENT_ID = "QoV0EhysIrvKh-uo5wrC2lxuJTc";
-    const REDIRECT_URI = location.href.split('?')[0]; // current page
+    const REDIRECT_URI = "https://mkennedy2547.github.io/billjitsu/";
     const AUTH_URL = "https://auth.ninjaone.com";
     const API_BASE = "https://api.ninjaone.com/v2";
 
@@ -293,4 +293,5 @@
 </body>
 
 </html>
+
 
