--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     // ==== CONFIGURATION ====
     const CLIENT_ID = "QoV0EhysIrvKh-uo5wrC2lxuJTc";
     const REDIRECT_URI = "https://mkennedy2547.github.io/billjitsu/";
-    const AUTH_URL = "https://auth.ninjaone.com";
+    const AUTH_URL = "https://app.ninjaone.com";
     const API_BASE = "https://api.ninjaone.com/v2";
 
     // ==== OAuth PKCE Helpers ====
