--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         response_type: 'code',
         client_id: CLIENT_ID,
         redirect_uri: REDIRECT_URI,
-        scope: 'monitoring management ticketing offline_access',
+        scope: 'monitoring management control offline_access',
         code_challenge: challenge,
         code_challenge_method: 'S256',
         state: Math.random().toString(36).substring(2)
